objects/Stage_Review__c.object
<CustomObject>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Decision__c</fullName>
        <label>Decision</label>
        <picklist>
            <picklistValues>
                <fullName>Go</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Go</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redirect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Continue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Delegate_PAC_Member_Name__c</fullName>
        <formula>Delegate_PAC_Member__r.User__r.Last_First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delegate BEP Member Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delegate_PAC_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delegate BEP Member</label>
        <referenceTo>ODP_PAC_Member__c</referenceTo>
        <relationshipLabel>Stage Review (Delegate PAC Member)</relationshipLabel>
        <relationshipName>Stage_Review1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PAC_Member_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>BEP Member ID</label>
        <referenceTo>ODP_PAC_Member__c</referenceTo>
        <relationshipLabel>Stage Review (PAC Member ID)</relationshipLabel>
        <relationshipName>Stage_Review</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PAC_Member_Name__c</fullName>
        <formula>PAC_Member_ID__r.User__r.Last_First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BEP Member Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Stage_ID__c</fullName>
        <label>Stage ID</label>
        <referenceTo>Release_Stage__c</referenceTo>
        <relationshipLabel>Stage Review</relationshipLabel>
        <relationshipName>Stage_Review</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Stage_Name__c</fullName>
        <formula>Release_Stage_ID__r.Stage_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Process Stage Name</label>
        <type>Text</type>
    </fields>
    <label>Stage Review</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SR-{0000000000}</displayFormat>
        <label>Stage Review ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stage Review</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>